Dropping options *PermSize; support was removed in JDK 8
avoids log message:
OpenJDK 64-Bit Server VM warning: Ignoring option MaxPermSize; support was removed in 8.0